# surprise-me

./: .gitignore  Cargo.toml  README.md
surprise-me/: Cargo.toml
surprise-me-derive/: Cargo.toml
surprise-me-derive/src/: attributes.rs  factor.rs  lib.rs  match_arms.rs  surprise.rs  util.rs
surprise-me-test/: Cargo.toml
surprise-me-test/src/: lib.rs
surprise-me/src/: lib.rs  surprise.rs
surprise-me/src/factors/: array.rs  collections.rs  cow.rs  mod.rs  non_zero.rs  option.rs  phantom.rs  primitive.rs  range.rs  result.rs  smart_pointers.rs  string.rs  sync.rs  tuple.rs
