[package]
name = "surprise-me"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
rand = "0.8.5"
surprise-me-derive = { path = "../surprise-me-derive" }
